kubernetes/core/traefik/tinyauth.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth
  namespace: traefik
  annotations:
    gatus.home-operations.com/endpoint: |
      url: http://tinyauth.traefik.svc.cluster.local:3000
      alerts:
        - type: discord
spec:
  routes:
    - match: Host(`auth.axis.scottmckendry.tech`)
      kind: Rule
      services:
        - name: tinyauth
          namespace: traefik
          port: 3000
  tls:
    secretName: axis-tls
